// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should have the correct default styles 1`] = `
.circuit-0 {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  background-color: var(--cui-bg-highlight);
  border-radius: 24px;
  position: relative;
  -webkit-transition: background-color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out;
  height: 24px;
  width: 40px;
  overflow: visible;
  cursor: pointer;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:hover {
  background-color: var(--cui-bg-highlight-hovered);
}

.circuit-0:active {
  background-color: var(--cui-bg-highlight-pressed);
}

.circuit-0[aria-checked='true'] {
  background-color: var(--cui-bg-accent-strong);
}

.circuit-0[aria-checked='true']:hover {
  background-color: var(--cui-bg-accent-strong-hovered);
}

.circuit-0[aria-checked='true']:active {
  background-color: var(--cui-bg-accent-strong-pressed);
}

.circuit-0:disabled,
.circuit-0[disabled] {
  background-color: var(--cui-bg-highlight-disabled);
}

.circuit-0[aria-checked='true']:disabled,
.circuit-0[aria-checked='true'][disabled] {
  background-color: var(--cui-bg-accent-strong-disabled);
}

.circuit-1 {
  display: block;
  background-color: var(--cui-fg-on-strong);
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.25);
  position: absolute;
  top: 50%;
  -webkit-transform: translate3d(4px, -50%, 0);
  -moz-transform: translate3d(4px, -50%, 0);
  -ms-transform: translate3d(4px, -50%, 0);
  transform: translate3d(4px, -50%, 0);
  -webkit-transition: box-shadow 200ms ease-in-out,-webkit-transform 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out,transform 200ms ease-in-out;
  height: 16px;
  width: 16px;
  border-radius: 16px;
}

[aria-checked='true'] .circuit-1 {
  -webkit-transform: translate3d(
          calc(40px - 16px - 4px),
          -50%,
          0
        );
  -moz-transform: translate3d(
          calc(40px - 16px - 4px),
          -50%,
          0
        );
  -ms-transform: translate3d(
          calc(40px - 16px - 4px),
          -50%,
          0
        );
  transform: translate3d(
          calc(40px - 16px - 4px),
          -50%,
          0
        );
}

.circuit-2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<button
  aria-checked="false"
  class="circuit-0"
  role="switch"
  type="button"
>
  <span
    class="circuit-1"
  />
  <span
    class="circuit-2"
  >
    off
  </span>
</button>
`;

exports[`Switch should have the correct on styles 1`] = `
.circuit-0 {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  background-color: var(--cui-bg-highlight);
  border-radius: 24px;
  position: relative;
  -webkit-transition: background-color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out;
  height: 24px;
  width: 40px;
  overflow: visible;
  cursor: pointer;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:hover {
  background-color: var(--cui-bg-highlight-hovered);
}

.circuit-0:active {
  background-color: var(--cui-bg-highlight-pressed);
}

.circuit-0[aria-checked='true'] {
  background-color: var(--cui-bg-accent-strong);
}

.circuit-0[aria-checked='true']:hover {
  background-color: var(--cui-bg-accent-strong-hovered);
}

.circuit-0[aria-checked='true']:active {
  background-color: var(--cui-bg-accent-strong-pressed);
}

.circuit-0:disabled,
.circuit-0[disabled] {
  background-color: var(--cui-bg-highlight-disabled);
}

.circuit-0[aria-checked='true']:disabled,
.circuit-0[aria-checked='true'][disabled] {
  background-color: var(--cui-bg-accent-strong-disabled);
}

.circuit-1 {
  display: block;
  background-color: var(--cui-fg-on-strong);
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.25);
  position: absolute;
  top: 50%;
  -webkit-transform: translate3d(4px, -50%, 0);
  -moz-transform: translate3d(4px, -50%, 0);
  -ms-transform: translate3d(4px, -50%, 0);
  transform: translate3d(4px, -50%, 0);
  -webkit-transition: box-shadow 200ms ease-in-out,-webkit-transform 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out,transform 200ms ease-in-out;
  height: 16px;
  width: 16px;
  border-radius: 16px;
}

[aria-checked='true'] .circuit-1 {
  -webkit-transform: translate3d(
          calc(40px - 16px - 4px),
          -50%,
          0
        );
  -moz-transform: translate3d(
          calc(40px - 16px - 4px),
          -50%,
          0
        );
  -ms-transform: translate3d(
          calc(40px - 16px - 4px),
          -50%,
          0
        );
  transform: translate3d(
          calc(40px - 16px - 4px),
          -50%,
          0
        );
}

.circuit-2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<button
  aria-checked="true"
  class="circuit-0"
  role="switch"
  type="button"
>
  <span
    class="circuit-1"
  />
  <span
    class="circuit-2"
  >
    on
  </span>
</button>
`;
